--- a/test.ipynb
+++ b/test.ipynb
@@ -61,15 +61,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Authentication token for the target API\n",
     "TOKEN = \"50407833\" \n",
     "PORT = None\n",
     "SEED = None\n",
     "\n",
     "def launch_api():\n",
+    "    \"\"\"Initialize connection to the target API and get session details\"\"\"\n",
     "    global PORT, SEED\n",
     "    response = requests.get(\n",
     "        \"http://34.122.51.94:9090/stealing_launch\",\n",
@@ -84,10 +86,15 @@
     "    return SEED, PORT\n",
     "\n",
     "def query_api(images, retries=3, delay=60):\n",
+    "    \"\"\"Send image batch to API and get embedding representations\n",
+    "    \n",
+    "    Handles rate limiting with exponential backoff retry mechanism\n",
+    "    \"\"\"\n",
     "    endpoint = \"/query\"\n",
     "    url = f\"http://34.122.51.94:{PORT}\" + endpoint\n",
     "    image_data = []\n",
     "    \n",
+    "    # Convert images to base64 format for API request\n",
     "    for img in images:\n",
     "        img = transforms.ToPILImage()(img.cpu())\n",
     "        img_byte_arr = io.BytesIO()\n",
@@ -121,11 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class CoverageTracker:\n",
+    "    \"\"\"Tracks our coverage of the target model's embedding space\n",
+    "    \n",
+    "    Uses a bucketing approach to estimate how much of the embedding space\n",
+    "    we've explored. This helps avoid triggering B4B protection.\n",
+    "    \"\"\"\n",
     "    def __init__(self, bucket_size=0.15, max_buckets=4096):\n",
     "        self.bucket_map = defaultdict(bool)\n",
     "        self.bucket_size = bucket_size\n",
@@ -133,18 +145,25 @@
     "        self.query_count = 0\n",
     "        \n",
     "    def _hash_embedding(self, emb):\n",
+    "        \"\"\"Convert embedding vector to discrete bucket coordinates\n",
+    "        \n",
+    "        Uses just the first 5 dimensions for efficiency\n",
+    "        \"\"\"\n",
     "        emb = np.array(emb)\n",
     "        return tuple(np.floor(emb[:5] / self.bucket_size))\n",
     "        \n",
     "    def update_coverage(self, embeddings):\n",
+    "        \"\"\"Process new embeddings and update coverage statistics\"\"\"\n",
     "        for emb in embeddings:\n",
     "            self.bucket_map[self._hash_embedding(emb)] = True\n",
     "        self.query_count += len(embeddings)\n",
     "        \n",
     "    def get_coverage(self):\n",
+    "        \"\"\"Calculate percentage of embedding space covered\"\"\"\n",
     "        return len(self.bucket_map) / self.max_buckets\n",
     "    \n",
     "    def is_safe(self, sample_size=1000):\n",
+    "        \"\"\"Check if adding more samples is likely to stay under B4B thresholds\"\"\"\n",
     "        current = len(self.bucket_map)\n",
     "        projected = current + (sample_size * 0.1)\n",
     "        return projected / self.max_buckets < 0.3"
@@ -164,6 +183,10 @@
    "outputs": [],
    "source": [
     "class TaskDataset(Dataset):\n",
+    "    \"\"\"Dataset class for the image collection used in model stealing\n",
+    "    \n",
+    "    Handles image loading, preprocessing and transformations\n",
+    "    \"\"\"\n",
     "    def __init__(self, transform=None):\n",
     "        self.ids = []\n",
     "        self.imgs = []\n",
@@ -173,10 +196,12 @@
     "            transforms.CenterCrop(32),\n",
     "            transforms.Lambda(self._ensure_rgb),\n",
     "            transforms.ToTensor(),\n",
+    "            # Use dataset-specific mean and std for normalization\n",
     "            transforms.Normalize((0.2980, 0.2962, 0.2987), (0.2886, 0.2875, 0.2889))\n",
     "        ])\n",
     "\n",
     "    def _ensure_rgb(self, img):\n",
+    "        \"\"\"Convert grayscale images to RGB if needed\"\"\"\n",
     "        if img.mode != 'RGB':\n",
     "            return img.convert('RGB')\n",
     "        return img\n",
@@ -191,6 +216,7 @@
     "        return len(self.ids)\n",
     "\n",
     "def load_stealing_dataset(data_path=\"ModelStealingPub.pt\"):\n",
+    "    \"\"\"Load the dataset of candidate images for stealing\"\"\"\n",
     "    original_data = torch.load(data_path, map_location=\"cpu\", weights_only=False)\n",
     "    dataset = TaskDataset()\n",
     "    dataset.ids = original_data.ids\n",
@@ -214,14 +240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class EncoderStealer(nn.Module):\n",
+    "    \"\"\"Neural network model designed to replicate the target encoder\n",
+    "    \n",
+    "    Uses convolutional layers for feature extraction followed by\n",
+    "    fully connected layers to generate embeddings\n",
+    "    \"\"\"\n",
     "    def __init__(self, output_dim=1024):\n",
     "        super().__init__()\n",
     "        \n",
+    "        # Feature extraction layers - 3 conv blocks with batch norm\n",
     "        self.feature_extractor = nn.Sequential(\n",
     "            nn.Conv2d(3, 64, 3, padding=1),\n",
     "            nn.BatchNorm2d(64),\n",
@@ -239,6 +271,7 @@
     "            nn.AdaptiveAvgPool2d(1)\n",
     "        )\n",
     "        \n",
+    "        # Embedding generation layers\n",
     "        self.embedding = nn.Sequential(\n",
     "            nn.Flatten(),\n",
     "            nn.Linear(256, 512),\n",
@@ -260,11 +293,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_model(model, train_loader, epochs=5):\n",
+    "    \"\"\"Train the model using collected image-embedding pairs\n",
+    "    \n",
+    "    Uses MSE loss to minimize L2 distance between predicted\n",
+    "    and target embeddings\n",
+    "    \"\"\"\n",
     "    model.train()\n",
     "    optimizer = optim.AdamW(model.parameters(), lr=3e-4)\n",
     "    criterion = nn.MSELoss()\n",
@@ -278,7 +316,7 @@
     "            optimizer.zero_grad()\n",
     "            outputs = model(images)\n",
     "            \n",
-    "            # Debug shape verification\n",
+    "            # Handle any shape mismatches (shouldn't happen with proper setup)\n",
     "            if outputs.shape != targets.shape:\n",
     "                print(f\"Shape mismatch! Output: {outputs.shape}, Target: {targets.shape}\")\n",
     "                targets = targets.view_as(outputs)\n",
@@ -301,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -323,6 +361,7 @@
     }
    ],
    "source": [
+    "# Initialize API connection - this gets our unique PORT and SEED values\n",
     "# def main():\n",
     "    # Initialize API connection\n",
     "launch_api()\n",
@@ -331,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -347,14 +386,13 @@
     "dataset = load_stealing_dataset()\n",
     "print(f\"Loaded dataset with {len(dataset)} images\")\n",
     "\n",
-    "# Initialize coverage tracker\n",
-    "tracker = CoverageTracker()\n",
-    "   "
+    "# Initialize our coverage tracking system\n",
+    "tracker = CoverageTracker()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -378,15 +416,17 @@
    ],
    "source": [
     "# Phase 1: Initial queries (low diversity)\n",
+    "# This establishes our baseline data for later targeted queries\n",
     "print(\"Phase 1: Initial low-diversity queries\")\n",
     "train_data = []\n",
     "\n",
     "for _ in range(5):  # 5 queries x 1000 images = 5000 initial samples\n",
+    "    # Randomly select 1000 images from the dataset\n",
     "    batch_indices = np.random.choice(len(dataset), 1000, replace=False)\n",
     "    batch_images = [dataset[i] for i in batch_indices]\n",
     "    batch_embs = query_api(batch_images)\n",
     "\n",
-    "    # Store images and embeddings properly\n",
+    "    # Store images and their corresponding embeddings\n",
     "    for img, emb in zip(batch_images, batch_embs):\n",
     "        train_data.append((img, torch.tensor(emb).float()))\n",
     "\n",
@@ -396,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1018,10 +1058,11 @@
    ],
    "source": [
     "# Phase 2: Strategic expansion\n",
+    "# This is where we use most of our query budget to maximize coverage\n",
     "print(\"\\nPhase 2: Strategic coverage expansion\")\n",
     "\n",
     "while tracker.query_count < 100000 and tracker.get_coverage() < 0.3:\n",
-    "    # Get exactly 1000 samples per query\n",
+    "    # Get exactly 1000 samples per query (API requirement)\n",
     "    batch_images = [dataset[i] for i in np.random.choice(len(dataset), 1000)]\n",
     "    batch_embs = query_api(batch_images)\n",
     "\n",
@@ -1031,7 +1072,7 @@
     "\n",
     "    tracker.update_coverage(batch_embs)\n",
     "\n",
-    "    # Periodic training every 10,000 samples\n",
+    "    # Periodic training every 10,000 samples to check progress\n",
     "    if len(train_data) % 10000 == 0:\n",
     "        loader = DataLoader(train_data, batch_size=256, shuffle=True, collate_fn=collate_fn)\n",
     "        model = EncoderStealer(output_dim=1024).to(device)\n",
@@ -1042,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1182,8 @@
     }
    ],
    "source": [
-    "# This will force the notebook to proceed to final steps with collected data\n",
+    "# Attempt to move forward with the data we've collected\n",
+    "# If something went wrong earlier, this will catch and report the error\n",
     "try:\n",
     "    print(f\"Collected {len(train_data)} samples from {tracker.query_count} queries\")\n",
     "    print(\"Proceeding to final training...\")\n",
@@ -1150,7 +1192,7 @@
     "    model = EncoderStealer(output_dim=1024).to(device)\n",
     "    train_model(model, final_loader, epochs=5)\n",
     "    \n",
-    "    # Export to ONNX\n",
+    "    # Export to ONNX for submission\n",
     "    dummy_input = torch.randn(1, 3, 32, 32).to(device)\n",
     "    torch.onnx.export(\n",
     "        model,\n",
@@ -1174,7 +1216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Final training\n",
+    "# Final model training with all collected data\n",
     "print(\"\\nFinal training\")\n",
     "final_loader = DataLoader(train_data, batch_size=256, shuffle=True, collate_fn=collate_fn)\n",
     "model = EncoderStealer(output_dim=1024).to(device)\n",
@@ -1183,11 +1225,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def validate_onnx(model_path):\n",
+    "    \"\"\"Verify that our ONNX model meets submission requirements\n",
+    "    \n",
+    "    Checks for correct input name and output shape\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        session = ort.InferenceSession(model_path)\n",
     "        # Check input name matches 'x'\n",
@@ -1203,6 +1249,7 @@
     "        raise Exception(f\"ONNX validation failed: {str(e)}\")\n",
     "        \n",
     "def submit_model(model_path):\n",
+    "    \"\"\"Submit the stolen model to the evaluation server\"\"\"\n",
     "    url = \"http://34.122.51.94:9090/stealing\"\n",
     "    with open(model_path, \"rb\") as f:\n",
     "        files = {\"file\": f}\n",
@@ -1219,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1280,7 @@
     }
    ],
    "source": [
-    "# After your final training, add this:\n",
+    "# Prepare for final submission\n",
     "print(\"\\nPreparing for submission...\")\n",
     "\n",
     "# 1. Verify model output shape\n",
@@ -1242,7 +1289,7 @@
     "    test_output = model(test_input)\n",
     "print(f\"Model test - Input shape: {test_input.shape}, Output shape: {test_output.shape}\")\n",
     "\n",
-    "# 2. Export with correct input name\n",
+    "# 2. Export with correct input name (must be \"x\" for server)\n",
     "dummy_input = torch.randn(1, 3, 32, 32).to(device)\n",
     "torch.onnx.export(\n",
     "    model,\n",
@@ -1278,18 +1325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Submission successful!\n",
-      "{'L2': 6.286516189575195}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Submit model\n",
     "submit_model(\"stolen_model.onnx\")"
@@ -1322,7 +1360,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
