--- a/test_improved.ipynb
+++ b/test_improved.ipynb
@@ -89,30 +89,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "a145bd5b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def query_api(images, retries=3, delay=60, timeout=120):\n",
+    "    \"\"\"Query the target API with images and get back embeddings\n",
+    "    \n",
+    "    Handles API's requirement of exactly 1000 images and includes\n",
+    "    robust error handling with retries and timeouts\n",
+    "    \"\"\"\n",
     "    endpoint = \"/query\"\n",
     "    url = f\"http://34.122.51.94:{PORT}\" + endpoint\n",
     "    \n",
-    "    # Critical: API requires exactly 1000 images\n",
+    "    # API requires exactly 1000 images - handle this automatically\n",
     "    if len(images) != 1000:\n",
     "        print(f\"WARNING: API requires exactly 1000 images, got {len(images)}\")\n",
     "        if len(images) < 1000:\n",
-    "            # Pad with duplicates of the first image to reach 1000\n",
+    "            # Pad with duplicates if we have too few\n",
     "            padding_needed = 1000 - len(images)\n",
     "            print(f\"Padding batch with {padding_needed} duplicate images\")\n",
     "            padding = [images[0]] * padding_needed\n",
     "            original_count = len(images)\n",
     "            images = images + padding\n",
     "        else:\n",
-    "            # Truncate to exactly 1000 images\n",
+    "            # Truncate if we have too many\n",
     "            print(f\"Truncating batch from {len(images)} to 1000 images\")\n",
     "            images = images[:1000]\n",
     "    \n",
+    "    # Convert images to base64 for API request\n",
     "    image_data = []\n",
     "    for img in images:\n",
     "        img = transforms.ToPILImage()(img.cpu())\n",
@@ -123,7 +129,7 @@
     "        image_data.append(img_base64)\n",
     "    \n",
     "    payload = json.dumps(image_data)\n",
-    "    payload_size = len(payload) / (1024 * 1024)  # Size in MB\n",
+    "    payload_size = len(payload) / (1024 * 1024)\n",
     "    print(f\"Request payload size: {payload_size:.2f} MB\")\n",
     "    \n",
     "    try:\n",
@@ -156,7 +162,6 @@
     "            \n",
     "    except (requests.exceptions.Timeout, requests.exceptions.ReadTimeout) as e:\n",
     "        print(f\"Timeout error: {e}\")\n",
-    "        # Don't split anymore since we need exactly 1000 images\n",
     "        print(\"Timeout occurred. Increasing timeout and retrying...\")\n",
     "        if retries > 0:\n",
     "            return query_api(images, retries - 1, delay, timeout * 2)\n",
@@ -166,14 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "1cb4f1e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# New improved function: Query with repetition to reduce noise\n",
     "def query_with_repetition(images, n_repeats=3, save_prefix=\"batch\"):\n",
-    "    \"\"\"Query the same images multiple times to average out noise\"\"\"\n",
+    "    \"\"\"Query the same images multiple times and average the results\n",
+    "    \n",
+    "    This helps reduce noise in the embeddings by aggregating\n",
+    "    multiple responses for the same inputs\n",
+    "    \"\"\"\n",
     "    all_embeddings = []\n",
     "    \n",
     "    for i in range(n_repeats):\n",
@@ -204,12 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "id": "e7fd8b7d",
    "metadata": {},
    "outputs": [],
    "source": [
     "class CoverageTracker:\n",
+    "    \"\"\"Tracks coverage of the target model's embedding space\n",
+    "    \n",
+    "    Uses bucketing approach to estimate how much of the embedding\n",
+    "    space we've explored, including detection of bucket boundaries\n",
+    "    \"\"\"\n",
     "    def __init__(self, bucket_size=0.15, max_buckets=4096):\n",
     "        self.bucket_map = defaultdict(bool)\n",
     "        self.bucket_size = bucket_size\n",
@@ -218,25 +231,33 @@
     "        self.embedding_history = []\n",
     "        \n",
     "    def _hash_embedding(self, emb):\n",
+    "        \"\"\"Map embedding to discrete bucket coordinates\"\"\"\n",
     "        emb = np.array(emb)\n",
     "        return tuple(np.floor(emb[:5] / self.bucket_size))\n",
     "        \n",
     "    def update_coverage(self, embeddings):\n",
+    "        \"\"\"Process new embeddings and update coverage statistics\"\"\"\n",
     "        self.embedding_history.extend(embeddings)\n",
     "        for emb in embeddings:\n",
     "            self.bucket_map[self._hash_embedding(emb)] = True\n",
     "        self.query_count += len(embeddings)\n",
     "        \n",
     "    def get_coverage(self):\n",
+    "        \"\"\"Calculate percentage of embedding space covered\"\"\"\n",
     "        return len(self.bucket_map) / self.max_buckets\n",
     "    \n",
     "    def is_safe(self, sample_size=1000):\n",
+    "        \"\"\"Check if we're likely to stay under B4B thresholds\"\"\"\n",
     "        current = len(self.bucket_map)\n",
     "        projected = current + (sample_size * 0.1)\n",
     "        return projected / self.max_buckets < 0.3\n",
     "    \n",
     "    def get_embedding_stats(self):\n",
-    "        \"\"\"Analyze embeddings to detect bucket boundaries\"\"\"\n",
+    "        \"\"\"Analyze embeddings to detect bucket boundaries\n",
+    "        \n",
+    "        Identifies discontinuities in the distribution that may\n",
+    "        indicate B4B bucket boundaries\n",
+    "        \"\"\"\n",
     "        if len(self.embedding_history) < 1000:\n",
     "            print(f\"Warning: Only {len(self.embedding_history)} samples available for embedding stats\")\n",
     "            return None\n",
@@ -276,6 +297,10 @@
    "outputs": [],
    "source": [
     "class TaskDataset(Dataset):\n",
+    "    \"\"\"Dataset for the image collection used for model stealing\n",
+    "    \n",
+    "    Handles image loading and preprocessing with normalization\n",
+    "    \"\"\"\n",
     "    def __init__(self, transform=None):\n",
     "        self.ids = []\n",
     "        self.imgs = []\n",
@@ -289,6 +314,7 @@
     "        ])\n",
     "\n",
     "    def _ensure_rgb(self, img):\n",
+    "        \"\"\"Convert grayscale to RGB if needed\"\"\"\n",
     "        if img.mode != 'RGB':\n",
     "            return img.convert('RGB')\n",
     "        return img\n",
@@ -303,6 +329,7 @@
     "        return len(self.ids)\n",
     "\n",
     "def load_stealing_dataset(data_path=\"ModelStealingPub.pt\"):\n",
+    "    \"\"\"Load dataset of candidate images for stealing\"\"\"\n",
     "    original_data = torch.load(data_path, map_location=\"cpu\", weights_only=False)\n",
     "    dataset = TaskDataset()\n",
     "    dataset.ids = original_data.ids\n",
@@ -327,15 +354,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "920c1114",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_strategic_queries(dataset, train_data, model=None, batch_size=200):\n",
+    "    \"\"\"Select informative images to query based on current model and data\n",
+    "    \n",
+    "    Uses PCA and distance-based methods to identify diverse and\n",
+    "    informative examples for querying\n",
+    "    \"\"\"\n",
     "    if len(train_data) > 0:\n",
     "        print(f\"Using {len(train_data)} training samples to guide selection\")\n",
-    "    \"\"\"Strategic query selection based on uncertainty and diversity\"\"\"\n",
+    "    \n",
     "    # If we have existing data and a model, use them to guide sampling\n",
     "    if model is not None and len(train_data) > 5000:\n",
     "        # Create a PCA model from existing embeddings to identify high-variance directions\n",
@@ -362,7 +394,6 @@
     "        scores = np.abs(np.dot(predictions, pca.components_.T)).sum(axis=1)\n",
     "        \n",
     "        # B4B-aware selection: avoid examples that are too similar to existing ones\n",
-    "        # This helps prevent triggering the B4B defense mechanism\n",
     "        if len(train_data) > 10000:\n",
     "            existing_sample = np.array([emb.cpu().numpy() for _, emb in train_data[:5000]])\n",
     "            for i, pred in enumerate(predictions):\n",
@@ -421,6 +452,11 @@
    "outputs": [],
    "source": [
     "class ImprovedEncoderStealer(nn.Module):\n",
+    "    \"\"\"Enhanced neural network to replicate the target encoder\n",
+    "    \n",
+    "    Features residual connections, dropout, and batch normalization\n",
+    "    for improved performance\n",
+    "    \"\"\"\n",
     "    def __init__(self, output_dim=1024):\n",
     "        super().__init__()\n",
     "        \n",
@@ -454,8 +490,8 @@
     "        x = F.relu(self.bn2(self.conv2(x)))\n",
     "        x = F.max_pool2d(x, 2)\n",
     "        \n",
-    "        # Third block - simplify the skip connection\n",
-    "        identity = x.clone()  # Simpler skip connection\n",
+    "        # Third block - with skip connection\n",
+    "        identity = x.clone()\n",
     "        x = F.relu(self.bn3(self.conv3(x)))\n",
     "        if identity.shape == x.shape: \n",
     "            x = x + identity\n",
@@ -507,12 +543,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "id": "40ce2358",
    "metadata": {},
    "outputs": [],
    "source": [
     "class EnsembleWrapper(nn.Module):\n",
+    "    \"\"\"Ensemble model combining multiple encoder stealers\n",
+    "    \n",
+    "    Averages the outputs of multiple models for more robust predictions\n",
+    "    \"\"\"\n",
     "    def __init__(self, models):\n",
     "        super().__init__()\n",
     "        self.models = nn.ModuleList(models)\n",
@@ -532,12 +572,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "8a94a4ad",
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_with_bucket_awareness(model, train_loader, bucket_edges=None, epochs=5, checkpoint_freq=1):\n",
+    "    \"\"\"Train model with awareness of B4B bucket boundaries\n",
+    "    \n",
+    "    Uses a bucket-aware loss function to avoid placing embeddings\n",
+    "    near detected bucket boundaries\n",
+    "    \"\"\"\n",
     "    if bucket_edges is not None:\n",
     "        valid_edges = sum(1 for edges in bucket_edges if len(edges) > 0)\n",
     "        print(f\"Using {valid_edges} dimensions with detected bucket edges\")\n",
@@ -600,12 +645,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "id": "a50b553b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_ensemble(train_data, n_models=3, bucket_edges=None):\n",
+    "    \"\"\"Train multiple models on different data subsets for ensemble learning\n",
+    "    \n",
+    "    Creates an ensemble of models trained on different subsets of data\n",
+    "    for more robust predictions\n",
+    "    \"\"\"\n",
     "    models = []\n",
     "    \n",
     "    for i in range(n_models):\n",
@@ -967,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "id": "1a5bc875",
    "metadata": {},
    "outputs": [
@@ -980,8 +1030,12 @@
     }
    ],
    "source": [
-    "# Add this to check embedding diversity across your dataset\n",
+    "# Check embedding diversity to guide training parameters\n",
     "def check_embedding_diversity(train_data, sample_size=100):\n",
+    "    \"\"\"Analyze how diverse the collected embeddings are\n",
+    "    \n",
+    "    Returns a ratio indicating uniqueness of embedding patterns\n",
+    "    \"\"\"\n",
     "    if len(train_data) < sample_size:\n",
     "        sample_size = len(train_data)\n",
     "    \n",
@@ -1001,13 +1055,13 @@
     "    print(f\"Checked {sample_size} samples, found {len(unique_embeddings)} unique embedding patterns\")\n",
     "    return len(unique_embeddings) / sample_size\n",
     "\n",
-    "# Call this before training\n",
+    "# Check diversity and adjust training parameters accordingly\n",
     "diversity_ratio = check_embedding_diversity(train_data)\n",
     "if diversity_ratio < 0.5:\n",
     "    print(\"WARNING: Low embedding diversity detected. Model training may be ineffective.\")\n",
     "    print(\"Consider gathering more diverse examples before proceeding.\")\n",
     "    \n",
-    "# Modify training parameters based on diversity\n",
+    "# Create data loader with appropriate batch size\n",
     "initial_loader = DataLoader(\n",
     "    train_data, \n",
     "    batch_size=64,  # Smaller batch size for stability\n",
@@ -1420,7 +1474,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Phase 2 with B4B protection: Strategic queries with model guidance and dataset limits\n",
+    "# Phase 2 with B4B protection: Strategic queries with model guidance\n",
     "print(\"\\nPhase 2: Strategic query expansion with dataset awareness\")\n",
     "\n",
     "# Configure Phase 2 parameters\n",
@@ -1569,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "id": "a08a0a3b",
    "metadata": {},
    "outputs": [
@@ -1742,7 +1796,7 @@
     "    pickle.dump(train_data, f)\n",
     "print(f\"Saved final dataset with {len(train_data)} samples\")\n",
     "\n",
-    "# Train ensemble models (no changes to the function itself)\n",
+    "# Train ensemble models\n",
     "models = train_ensemble(train_data, n_models=3, bucket_edges=bucket_edges)\n",
     "\n",
     "# Save individual models\n",
@@ -1957,18 +2011,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "id": "dbc91653",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ONNX validation passed! Model meets submission requirements\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Validate ONNX\n",
     "validate_onnx(\"stolen_model_improved.onnx\")"
@@ -1976,19 +2022,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "id": "acb54b14",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Submission successful!\n",
-      "{'L2': 8.897150039672852}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Submit model\n",
     "submit_model(\"stolen_model_improved.onnx\")"
